css/style.css
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box; }

html {
  font-size: 62.5%; }

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  overflow-x: hidden; }

html, body {
  font-family: 'Poppins','sans-serif'; }

.button {
  font-size: 2.5rem;
  font-family: 'Poppins','sans-serif';
  text-transform: uppercase;
  letter-spacing: 1.5px;
  padding: .5rem 2rem;
  border-radius: 5px;
  border: none;
  cursor: pointer;
  transition: all .4s ease; }

.nav {
  position: fixed;
  width: 100%;
  display: inline-block;
  height: 8rem;
  background-color: #000;
  box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
  z-index: 1000; }
  .nav_brand {
    display: inline-block;
    position: absolute;
    top: 15%;
    left: 1%;
    font-size: 2.5rem;
    color: #dddddd;
    letter-spacing: 2px;
    font-weight: 500;
    padding-left: 2rem;
    margin-top: 1rem;
    text-transform: uppercase; }
  .nav_links {
    font-size: 1.5rem;
    color: #d4d4d4;
    display: inline-block;
    position: absolute;
    top: 12%;
    right: 3%;
    margin-top: 2rem; }
    .nav_links ul {
      padding-bottom: 3rem; }
      .nav_links ul a {
        text-decoration: none;
        color: #fff;
        margin-left: 3rem;
        padding-bottom: .5rem; }
        .nav_links ul a:hover {
          border-bottom: 2px rgba(255, 255, 0, 0.8) solid; }
      .nav_links ul li {
        display: inline-block; }
    .nav_links .btn-memberships {
      background-color: rgba(255, 255, 0, 0.9);
      padding: .75rem;
      color: #000;
      font-weight: 500;
      letter-spacing: 1px; }
      .nav_links .btn-memberships:hover {
        border-bottom: none;
        background-color: rgba(255, 255, 0, 0.5); }

.header {
  height: 800px;
  background: linear-gradient(rgba(49, 51, 44, 0.65), rgba(71, 71, 71, 0.5)), url(../images/header-barbell.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover; }
  .header_text {
    position: absolute;
    top: 25%;
    left: 15%;
    font-size: 4rem;
    text-transform: uppercase;
    color: rgba(0, 0, 0, 0.7); }
  .header_span {
    position: absolute;
    top: 65%;
    left: -4%;
    font-size: 14.5rem;
    color: rgba(255, 255, 0, 0.6); }
  .header_video {
    position: absolute;
    top: 26%;
    right: 15%; }
  .header_button {
    position: absolute;
    top: 225%;
    left: 28%;
    height: auto; }
    .header_button .btn-head {
      background-color: #313131;
      color: #fff; }
      .header_button .btn-head:hover {
        background-color: rgba(122, 122, 122, 0.795);
        color: #d8d8d8; }
  .header_fade-text {
    color: rgba(255, 255, 255, 0.025); }
    .header_fade-text h1 {
      margin: 0;
      padding: 0;
      font-size: 22rem; }
    .header_fade-text--one {
      position: absolute;
      top: -2%;
      right: -5%; }
    .header_fade-text--two {
      position: absolute;
      bottom: 3%;
      left: 3%; }

.about {
  position: relative;
  z-index: 2000;
  padding-top: 25rem;
  height: 1500px;
  background: linear-gradient(to left, rgba(255, 255, 255, 0.65), rgba(243, 160, 160, 0.5)), url(../images/woman-barbell.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed; }

.convert {
  text-align: center;
  height: 275px;
  background-color: #000;
  display: flex;
  flex-direction: column;
  margin: auto; }
  .convert_header {
    margin: 3rem;
    font-size: 5rem;
    text-transform: uppercase;
    color: #fff;
    letter-spacing: 3px; }
    .convert_header h3 {
      font-weight: 600; }
  .convert_button .button-cvt {
    color: #000;
    background-color: #FBE055; }
    .convert_button .button-cvt:hover {
      background-color: rgba(251, 223, 85, 0.7); }
  .convert_expiry {
    color: #fff;
    margin-top: 3rem;
    font-size: 1.75rem; }

.pass {
  height: 200px;
  background-color: #C4C4C4;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  padding: 5rem; }
  .pass_text {
    font-size: 3.5rem;
    text-transform: uppercase;
    letter-spacing: 1px; }
    .pass_text h4 {
      font-weight: 400; }
  .pass_button .button-pass {
    background-color: #E12D2D;
    color: #fff; }
    .pass_button .button-pass:hover {
      background-color: rgba(225, 45, 45, 0.75); }

.info {
  background-color: #131313;
  color: grey;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  display: flex;
  padding: 5rem; }
  .info_hours {
    font-size: 1.25rem;
    width: 10%; }
  .info_location {
    font-size: 1.5rem;
    margin-left: 2rem; }

